UI changes. Pre-release icons. :)

--- a/TwilightBoxart.UX/TwilightBoxart.UX.csproj
+++ b/TwilightBoxart.UX/TwilightBoxart.UX.csproj
@@ -53,8 +53,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Starvingartist-Antiseptic-Videogame-Nintendo-ds-lite %281%29.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>TwilightBoxart.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=4.1.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
@@ -129,6 +131,10 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Content Include="Starvingartist-Antiseptic-Videogame-Nintendo-ds-lite %281%29.ico" />
+    <Content Include="TwilightBoxart.manifest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -171,7 +177,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <None Include="Resources\GitHub-Mark-64px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
@@ -183,4 +189,14 @@
     <Error Condition="!Exists('..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.Toolset.3.2.1\build\Microsoft.Net.Compilers.Toolset.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.Toolset.3.2.1\build\Microsoft.Net.Compilers.Toolset.props'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>goto :$(ConfigurationName)
+:Release
+echo Cleaning xml/pdb..
+del $(TargetDir)\*.xml /Q
+del $(TargetDir)\*.pdb /Q
+goto :exit
+:Debug
+:exit</PostBuildEvent>
+  </PropertyGroup>
 </Project>
