--- a/TwilightBoxart/TwilightBoxart.csproj
+++ b/TwilightBoxart/TwilightBoxart.csproj
@@ -5,12 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="NoIntro.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\KirovAir.Core\KirovAir.Core\KirovAir.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="NoIntro.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
