- Removed own project dependency. - Added publish profiles. - Added readme.

--- a/TwilightBoxart.CLI/TwilightBoxart.CLI.csproj
+++ b/TwilightBoxart.CLI/TwilightBoxart.CLI.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ApplicationIcon></ApplicationIcon>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,14 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\KirovAir.Core\KirovAir.Core\KirovAir.Core.csproj" />
-    <ProjectReference Include="..\TwilightBoxart\TwilightBoxart.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Include="TwilightBoxart.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TwilightBoxart\TwilightBoxart.csproj" />
   </ItemGroup>
 
 </Project>
