--- a/TwilightBoxart.CLI/TwilightBoxart.ini
+++ b/TwilightBoxart.CLI/TwilightBoxart.ini
@@ -1,3 +1,5 @@
 ﻿[Config]
-SdRoot=C:\Users\Jesse\Downloads\roms
-BoxArtDir=_nds\TWiLightMenu\boxart
+SdRoot=
+BoxArtDir={sdroot}\_nds\TWiLightMenu\boxart
+BoxartWidth=128
+BoxartHeight=115
