--- a/TwilightBoxart/TwilightBoxart.csproj
+++ b/TwilightBoxart/TwilightBoxart.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <None Remove="NoIntro.db" />
+    <None Remove="TwilightBoxart.ini" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +17,9 @@
   <ItemGroup>
     <Content Include="NoIntro.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TwilightBoxart.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
