Improved config handling. Disabled 3ds border.

--- a/TwilightBoxart.CLI/TwilightBoxart.ini
+++ b/TwilightBoxart.CLI/TwilightBoxart.ini
@@ -6,3 +6,8 @@ BoxartPath={sdroot}/_nds/TWiLightMenu/boxart
 BoxartWidth=128
 BoxartHeight=115
 KeepAspectRatio=true
+
+; Borders
+BoxartBorderStyle=Line ; NintendoDSi | Nintendo3DS | Line
+BoxartBorderThickness=1 ; In pixels
+BoxartBorderColor=0xFF000000 ; Hex color (Alpha (FF),R (00), B(00), G(00))
