- Some code cleanup - Added single download use based on metadata only. (For upcoming API, stay tuned!)

--- a/TwilightBoxart.CLI/TwilightBoxart.ini
+++ b/TwilightBoxart.CLI/TwilightBoxart.ini
@@ -10,4 +10,7 @@ KeepAspectRatio=true
 ; Borders
 BoxartBorderStyle=Line ; NintendoDSi | Nintendo3DS | Line
 BoxartBorderThickness=1 ; In pixels
-BoxartBorderColor=0xFF000000 ; Hex color (Alpha (FF),R (00), B(00), G(00))
+BoxartBorderColor=0xFF000000 ; Hex color (Alpha (FF), R (00), G(00), B(00))
+
+; Cache | Use a directory for image cache.
+; CachePath=/tmp/
