--- a/TwilightBoxart.CLI/TwilightBoxart.ini
+++ b/TwilightBoxart.CLI/TwilightBoxart.ini
@@ -8,9 +8,6 @@ BoxartHeight=115
 KeepAspectRatio=true
 
 ; Borders
-BoxartBorderStyle=Line ; NintendoDSi | Nintendo3DS | Line
-BoxartBorderThickness=1 ; In pixels
-BoxartBorderColor=0xFF000000 ; Hex color (Alpha (FF), R (00), G(00), B(00))
-
-; Cache | Use a directory for image cache.
-; CachePath=/tmp/
+;BoxartBorderStyle=Line ; NintendoDSi | Nintendo3DS | Line
+;BoxartBorderThickness=1 ; In pixels
+;BoxartBorderColor=0xFF000000 ; Hex color (Alpha (FF), R (00), G(00), B(00))
