Fixes twilightmenu settings when bigger images are being used.

--- a/TwilightBoxart.CLI/TwilightBoxart.ini
+++ b/TwilightBoxart.CLI/TwilightBoxart.ini
@@ -2,7 +2,9 @@
 [Config]
 SdRoot=
 BoxartPath={sdroot}/_nds/TWiLightMenu/boxart
-; Large for NDS = 256 x 192
+SettingsPath={sdroot}/_nds/TWiLightMenu/settings.ini
+
+; Large for NDS = 208 x 143
 BoxartWidth=128
 BoxartHeight=115
 KeepAspectRatio=true
